--- a/index.css
+++ b/index.css
@@ -115,12 +115,21 @@
     height: 60px;
 }
 
-.contact-wrapper .contact-type{
+.contact-wrapper .phone-number{
     border: 1px solid #333333;
     border-radius: 6px;
     width: 540px;
     height: 60px;
     margin-top: 25px;
+}
+
+.contact-wrapper .service-select{
+    color: rgba(19, 39, 67, 0.5);
+    border: 1px solid #333333;
+    border-radius: 6px;
+    margin-top: 25px;
+    width: 540px;
+    height: 60px;
 }
 
 .contact-wrapper .contact-input .submit-button{
